change notebook layout
- in 'Load Data' section

--- a/main.ipynb
+++ b/main.ipynb
@@ -271,6 +271,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ccb69f5-d797-45e6-8bdd-8aff4c5d06d4",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## fNIRS Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "02dfb947-4b3f-4ec6-82a5-0820f46b2ea0",
@@ -283,10 +294,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b595c1c8-6472-48aa-853d-4276340ad742",
-   "metadata": {},
+   "id": "7e341a17-b72a-4503-97b3-1e4c1437cbfb",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "---"
+    "### NIRX Data (MNE Sample)"
    ]
   },
   {
@@ -310,13 +324,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3b45b3-f608-4daf-97ef-84abc19517f1",
+   "id": "8a2c4b38-3c62-4b91-b088-26f18f28dd23",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## ~~RAW.FIF Data~~"
+    "### ~~RAW.FIF Data~~"
    ]
   },
   {
@@ -426,13 +440,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac3ec6f-9826-437a-a9e3-51584fb454b4",
+   "id": "52553b2c-f137-48a7-9eac-d850a881b8a2",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Data Specific Constants"
+    "#### Data Specific Constants"
    ]
   },
   {
@@ -459,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3595aff-25a3-4101-8eae-3b1bf22bf324",
+   "id": "805ffcac-4b14-4691-b2fe-9e0274869193",
    "metadata": {},
    "source": [
     "---"
@@ -467,7 +481,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "6b8e0898-5af8-47e1-8832-67dfa7255bd0",
+   "id": "836fcf9c-2820-46f0-bec4-272f4603424c",
    "metadata": {},
    "source": [
     "# Wavelengths availables\n",
@@ -476,7 +490,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e22b780b-b8db-4000-b65f-a2d1aeb5514b",
+   "id": "7927e321-8fef-429f-8eaa-88d6701cd742",
    "metadata": {},
    "source": [
     "# Total number of wavelengths\n",
@@ -485,7 +499,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "908d666b-0c52-4781-8e6b-66e1a853784e",
+   "id": "24e66d1d-2286-4b2b-b9ca-12ad7093974b",
    "metadata": {},
    "source": [
     "# Number of wavelengths used in analysis\n",
@@ -494,7 +508,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "319d5169-ef59-46de-8b21-f10ea4d7a6fa",
+   "id": "9acf9e1d-d8a9-4f57-84a8-7fc6cc2d8725",
    "metadata": {},
    "source": [
     "# Number of expected channels\n",
@@ -503,7 +517,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "1b9593ec-cb48-44ad-97a8-3e3f01661918",
+   "id": "db549a66-f217-41d1-a932-127594e807bd",
    "metadata": {},
    "source": [
     "# Number of probes\n",
@@ -512,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ad25067-8b2e-492b-8498-e516b4b5baf2",
+   "id": "631699f6-dc72-4d8a-844a-7f4fa61fb57c",
    "metadata": {},
    "source": [
     "---"
@@ -520,7 +534,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "2d02e0f1-0fdd-47dd-b762-4e400271ab20",
+   "id": "4feab0a7-b8f9-4bbd-975c-ba590c28928e",
    "metadata": {},
    "source": [
     "# Source-Detector pairs (all)\n",
@@ -529,7 +543,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "78b55a6f-94eb-4871-a5e9-a2677581c1f2",
+   "id": "08fc8802-ac54-4128-af8e-a181d03bf55d",
    "metadata": {},
    "source": [
     "# Unused Channels\n",
@@ -538,7 +552,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "dbd1f157-9094-4d0f-87fb-2be640de3fd6",
+   "id": "99fef129-a0df-4046-9cd4-ac5f527396eb",
    "metadata": {},
    "source": [
     "# Short Channels\n",
@@ -547,7 +561,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "13bb080e-15be-4819-8aad-0bd19b8dbb6b",
+   "id": "7ed4c34d-49ee-4255-a69c-e7b3bf2006a5",
    "metadata": {},
    "source": [
     "# Long Channels\n",
@@ -556,7 +570,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e894b913-62b9-4f1b-bbe2-f657cc9b8471",
+   "id": "7855f46c-d5c7-41c9-9882-ad38e918033f",
    "metadata": {},
    "source": [
     "# Used Channels\n",
@@ -565,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53bad458-eb6b-4f05-9286-4eb785e7d2e3",
+   "id": "363becca-da4e-44e7-9676-b8258b805d60",
    "metadata": {},
    "source": [
     "---"
@@ -573,7 +587,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "1e247e79-4b31-4d75-82bc-a1fe19d11444",
+   "id": "cbb00f2c-751f-49ad-9076-80a800eab2c5",
    "metadata": {},
    "source": [
     "# Names of the wavelength specific channels (only used channels)\n",
@@ -583,13 +597,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ccb69f5-d797-45e6-8bdd-8aff4c5d06d4",
+   "id": "abd5cdb7-a3a3-4cc7-96ae-3247e70924ae",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## CSV Data"
+    "### CSV Data"
    ]
   },
   {
@@ -885,7 +899,7 @@
     "tags": []
    },
    "source": [
-    "### Data Specific Constants"
+    "#### Data Specific Constants"
    ]
   },
   {
@@ -1152,7 +1166,7 @@
     "tags": []
    },
    "source": [
-    "### Backlight Removal"
+    "#### Backlight Removal"
    ]
   },
   {
@@ -1321,7 +1335,7 @@
     "tags": []
    },
    "source": [
-    "### MNE Object"
+    "#### MNE Object"
    ]
   },
   {
@@ -1714,6 +1728,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "025fcc51-0952-4c0f-bda2-d4233cfc36b3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Data Specific Constants"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "18584078-4792-4bfc-a301-2b91e69b087b",
@@ -1763,6 +1787,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "257eb718-959e-4abb-ba1b-345a09a82c88",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "id": "8b304bb4-275f-4161-93e5-91e593b58e74",
@@ -1806,7 +1838,6 @@
    "cell_type": "markdown",
    "id": "8e36a6ce-d80e-42fc-b6c9-be5646dfeb07",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1992,7 +2023,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_290290/2455740974.py:2: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "/tmp/ipykernel_296371/2455740974.py:2: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  raw_intensity.set_montage(montage)\n"
      ]
     },
@@ -2104,7 +2135,6 @@
    "cell_type": "markdown",
    "id": "9e6980de-97b0-42d4-a211-dded7169c2ee",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2597,6 +2627,7 @@
    "cell_type": "markdown",
    "id": "19ab9931-bcd9-435c-91b2-9e410c03a47b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
