change exp 'timestones'
- some print changes

--- a/main.ipynb
+++ b/main.ipynb
@@ -1468,6 +1468,7 @@
    "cell_type": "markdown",
    "id": "dd53561a-5277-4f7a-82cc-8e982c19b14f",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1480,7 +1481,7 @@
    "metadata": {},
    "source": [
     "`Stages of the experiment`\n",
-    "> *\\<exp\\>* → **\\[ *\\<tri\\>* = *\\<wait1\\>* → *\\<target\\>* → *\\<motion\\>* → *\\<probe\\>* → *\\<feedb\\>* → *\\<feedbEnd\\>* \\]** → *\\<expEnd\\>*"
+    "> *\\<exp\\>* → **\\[ *\\<tri\\>* = *\\<wait1\\>* → *\\<target\\>* → *\\<motion\\>* → *\\<probe\\>* → *\\<feedb\\>* → *\\<feedbEnd\\>* + {data_write()} \\]** → *\\<expEnd\\>*"
    ]
   },
   {
@@ -1499,8 +1500,8 @@
     "    'num_targets',           # 3     # <trl.numTargets(trl.num)>     # number of targets ({0, 2, 3, 4, 5})\n",
     "    'probe_match',           # 4     # <trl.probeMatch(trl.num)>     # target (1) or not (0)\n",
     "\n",
-    "    'checker_pres',          # 5     # <trl.checkerPres(trl.num)>    # 0 -- ??\n",
-    "    'checker_side',          # 6     # <trl.checkerSide(trl.num)>    # 0 -- ??\n",
+    "    'checker_pres',          # 5     # <trl.checkerPres(trl.num)>    # 0 -- checkerboard present (1) or not (0)\n",
+    "    'checker_side',          # 6     # <trl.checkerSide(trl.num)>    # 0 -- checkerboard display side; right (1) or left (2), or NA (0)\n",
     "\n",
     "    'id_correct',            # 7     # <dat.IDcor>                   # correct (1), incorrect (2), other (3), none (4)\n",
     "\n",
@@ -1515,7 +1516,7 @@
     "    'probe_e',               # 14    # <time.probeE>                 # <probe - exp> -- response collection time, relative to start of the experiment, in seconds\n",
     "\n",
     "    'tri_t',                 # 15    # <time.triT>                   # <tri - tri> -- trial starting time, relative to start of the trial, in seconds\n",
-    "    'wait_t',                # 16    # <time.waitT>                  # <wait - tri> -- ??\n",
+    "    'wait_t',                # 16    # <time.waitT>                  # <wait - tri> -- initial wait time, relative to the start of the trial, in seconds\n",
     "    'target_t',              # 17    # <time.targetT>                # <target - tri> -- target display time, relative to start of the trial, in seconds\n",
     "    'motion_t',              # 18    # <time.motionT>                # <motion - tri> -- motion start time, relative to start of the trial, in seconds\n",
     "    'probe_t',               # 19    # <time.probeT>                 # <probe - tri> -- response collection time, relative to start of the trial, in seconds\n",
@@ -1529,208 +1530,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "8d94916e-03f8-4a03-b2ec-5a9e97b246c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rt</th>\n",
-       "      <th>tri_e</th>\n",
-       "      <th>wait_e</th>\n",
-       "      <th>target_e</th>\n",
-       "      <th>motion_e</th>\n",
-       "      <th>probe_e</th>\n",
-       "      <th>tri_t</th>\n",
-       "      <th>wait_t</th>\n",
-       "      <th>target_t</th>\n",
-       "      <th>motion_t</th>\n",
-       "      <th>probe_t</th>\n",
-       "      <th>wait_p</th>\n",
-       "      <th>target_p</th>\n",
-       "      <th>motion_p</th>\n",
-       "      <th>probe_p</th>\n",
-       "      <th>feedb_p</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.178703</td>\n",
-       "      <td>0.163018</td>\n",
-       "      <td>0.180914</td>\n",
-       "      <td>6.148375</td>\n",
-       "      <td>8.134235</td>\n",
-       "      <td>18.134181</td>\n",
-       "      <td>0.000087</td>\n",
-       "      <td>4.991613</td>\n",
-       "      <td>5.985356</td>\n",
-       "      <td>7.971216</td>\n",
-       "      <td>17.971162</td>\n",
-       "      <td>5.967461</td>\n",
-       "      <td>1.985860</td>\n",
-       "      <td>9.999946</td>\n",
-       "      <td>1.993683</td>\n",
-       "      <td>1.974282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.983480</td>\n",
-       "      <td>22.109235</td>\n",
-       "      <td>22.134774</td>\n",
-       "      <td>28.096173</td>\n",
-       "      <td>30.084363</td>\n",
-       "      <td>40.084203</td>\n",
-       "      <td>0.000154</td>\n",
-       "      <td>4.993334</td>\n",
-       "      <td>5.986938</td>\n",
-       "      <td>7.975128</td>\n",
-       "      <td>17.974967</td>\n",
-       "      <td>5.961399</td>\n",
-       "      <td>1.988190</td>\n",
-       "      <td>9.999840</td>\n",
-       "      <td>1.994032</td>\n",
-       "      <td>1.973392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.800306</td>\n",
-       "      <td>44.056405</td>\n",
-       "      <td>44.080523</td>\n",
-       "      <td>50.041681</td>\n",
-       "      <td>52.034193</td>\n",
-       "      <td>62.034307</td>\n",
-       "      <td>0.000121</td>\n",
-       "      <td>4.991844</td>\n",
-       "      <td>5.985276</td>\n",
-       "      <td>7.977789</td>\n",
-       "      <td>17.977903</td>\n",
-       "      <td>5.961157</td>\n",
-       "      <td>1.992513</td>\n",
-       "      <td>10.000114</td>\n",
-       "      <td>1.993719</td>\n",
-       "      <td>1.973668</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.201405</td>\n",
-       "      <td>66.006537</td>\n",
-       "      <td>66.027437</td>\n",
-       "      <td>71.988553</td>\n",
-       "      <td>73.984323</td>\n",
-       "      <td>83.984201</td>\n",
-       "      <td>0.000092</td>\n",
-       "      <td>4.988615</td>\n",
-       "      <td>5.982016</td>\n",
-       "      <td>7.977785</td>\n",
-       "      <td>17.977664</td>\n",
-       "      <td>5.961116</td>\n",
-       "      <td>1.995770</td>\n",
-       "      <td>9.999878</td>\n",
-       "      <td>1.993750</td>\n",
-       "      <td>1.973488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.892915</td>\n",
-       "      <td>87.956879</td>\n",
-       "      <td>87.981263</td>\n",
-       "      <td>93.942592</td>\n",
-       "      <td>95.934395</td>\n",
-       "      <td>105.934476</td>\n",
-       "      <td>0.000382</td>\n",
-       "      <td>4.992202</td>\n",
-       "      <td>5.985713</td>\n",
-       "      <td>7.977516</td>\n",
-       "      <td>17.977597</td>\n",
-       "      <td>5.961329</td>\n",
-       "      <td>1.991803</td>\n",
-       "      <td>10.000081</td>\n",
-       "      <td>1.993765</td>\n",
-       "      <td>1.973575</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1.264706</td>\n",
-       "      <td>109.914409</td>\n",
-       "      <td>109.941691</td>\n",
-       "      <td>115.903100</td>\n",
-       "      <td>117.900842</td>\n",
-       "      <td>127.900993</td>\n",
-       "      <td>0.000030</td>\n",
-       "      <td>4.995248</td>\n",
-       "      <td>5.988691</td>\n",
-       "      <td>7.986433</td>\n",
-       "      <td>17.986585</td>\n",
-       "      <td>5.961409</td>\n",
-       "      <td>1.997742</td>\n",
-       "      <td>10.000152</td>\n",
-       "      <td>1.993738</td>\n",
-       "      <td>1.973485</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         rt       tri_e      wait_e    target_e    motion_e     probe_e  \\\n",
-       "0  1.178703    0.163018    0.180914    6.148375    8.134235   18.134181   \n",
-       "1  0.983480   22.109235   22.134774   28.096173   30.084363   40.084203   \n",
-       "2  1.800306   44.056405   44.080523   50.041681   52.034193   62.034307   \n",
-       "3  1.201405   66.006537   66.027437   71.988553   73.984323   83.984201   \n",
-       "4  0.892915   87.956879   87.981263   93.942592   95.934395  105.934476   \n",
-       "5  1.264706  109.914409  109.941691  115.903100  117.900842  127.900993   \n",
-       "\n",
-       "      tri_t    wait_t  target_t  motion_t    probe_t    wait_p  target_p  \\\n",
-       "0  0.000087  4.991613  5.985356  7.971216  17.971162  5.967461  1.985860   \n",
-       "1  0.000154  4.993334  5.986938  7.975128  17.974967  5.961399  1.988190   \n",
-       "2  0.000121  4.991844  5.985276  7.977789  17.977903  5.961157  1.992513   \n",
-       "3  0.000092  4.988615  5.982016  7.977785  17.977664  5.961116  1.995770   \n",
-       "4  0.000382  4.992202  5.985713  7.977516  17.977597  5.961329  1.991803   \n",
-       "5  0.000030  4.995248  5.988691  7.986433  17.986585  5.961409  1.997742   \n",
-       "\n",
-       "    motion_p   probe_p   feedb_p  \n",
-       "0   9.999946  1.993683  1.974282  \n",
-       "1   9.999840  1.994032  1.973392  \n",
-       "2  10.000114  1.993719  1.973668  \n",
-       "3   9.999878  1.993750  1.973488  \n",
-       "4  10.000081  1.993765  1.973575  \n",
-       "5  10.000152  1.993738  1.973485  "
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mat.loc[:5, mat.columns[9:]]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "025fcc51-0952-4c0f-bda2-d4233cfc36b3",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1739,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "18584078-4792-4bfc-a301-2b91e69b087b",
    "metadata": {},
    "outputs": [
@@ -1772,18 +1575,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "id": "0282d2ba-0f4b-471b-a830-5b325cd25e25",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read experiment end time and set start time\n",
-    "T_EXP_START = -0.1                   # <exp>                         # experiment start time, in seconds; offset due to trigger delay\n",
+    "T_EXP_START = 0 # -0.1?              # <exp>                         # experiment start time, in seconds; offset due to trigger delay, in seconds\n",
     "T_EXP_END = T_EXP_START + DUR['exp']                                 # experiment end time, in seconds\n",
     "\n",
     "# Set recording start and end times\n",
     "T_REC_START = 0                                                      # fNIRS recording start time, in seconds\n",
-    "T_REC_END = data_pd['Time[ms]'].iloc[-1]/1000                        # fNIRS recording end time, in seconds # np.ptp(data_pd['Time[ms]'])"
+    "T_REC_END = data_pd['Time[ms]'].iloc[-1]/1000                        # fNIRS recording end time, in seconds                        # np.ptp(data_pd['Time[ms]'])?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba310edf-e4ca-4440-9432-097cb905735c",
+   "metadata": {},
+   "source": [
+    "> *`T_EXP_START`* == *0* == *`T_REC_START`* ------------------------------------------------------------ *`T_EXP_END`* ------ *`T_REC_END`*"
    ]
   },
   {
@@ -1796,26 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "8b304bb4-275f-4161-93e5-91e593b58e74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data_pd['Time[ms]'][0]/1000 = 3.481s\n"
-     ]
-    }
-   ],
-   "source": [
-    "# QUES - Why is `data_pd['Time[ms]'][0]` not 0?!\n",
-    "print(f'''{data_pd['Time[ms]'][0]/1000 = }s''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 51,
    "id": "54e6f366-952a-4b60-8a5e-56dca55bb249",
    "metadata": {},
    "outputs": [
@@ -1823,15 +1615,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "T_EXP_END = 664.707s\n",
       "T_REC_END = 671.284s\n",
-      "T_EXP_END = 664.607s\n"
+      "\n",
+      "T_REC_END - T_EXP_END = 6.577s\n"
      ]
     }
    ],
    "source": [
-    "# QUES - Why is `T_REC_END` != `T_EXP_END`?!\n",
+    "# QUES - Why is `T_EXP_END` != `T_REC_END`?!\n",
+    "print(f'{T_EXP_END = :.3f}s')\n",
     "print(f'{T_REC_END = :.3f}s')\n",
-    "print(f'{T_EXP_END = :.3f}s')"
+    "\n",
+    "print(f'\\n{T_REC_END - T_EXP_END = :.3f}s')"
    ]
   },
   {
@@ -1846,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "id": "ff5e0448-ecb9-4cd6-aecd-b8a91417e16d",
    "metadata": {},
    "outputs": [],
@@ -1857,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "id": "9a2514ff-2509-4402-86a0-d7625a66e019",
    "metadata": {},
    "outputs": [],
@@ -1892,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "id": "988973df-af6a-44da-becb-4bffa4792f81",
    "metadata": {},
    "outputs": [
@@ -1968,7 +1764,7 @@
        "<RawArray | 12 x 12295 (667.8 s), ~1.1 MB, data loaded>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1991,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "id": "d0cda81a-4932-44dd-8d04-29f22c0e9a78",
    "metadata": {},
    "outputs": [],
@@ -2005,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "id": "07ae0960-d191-4947-8f4f-be33fdcf42dc",
    "metadata": {},
    "outputs": [],
@@ -2015,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "id": "7bd10db2-df8f-4409-8958-6881a418165b",
    "metadata": {},
    "outputs": [
@@ -2023,7 +1819,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_296371/2455740974.py:2: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "/tmp/ipykernel_320176/2455740974.py:2: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  raw_intensity.set_montage(montage)\n"
      ]
     },
@@ -2099,7 +1895,7 @@
        "<RawArray | 12 x 12295 (667.8 s), ~1.1 MB, data loaded>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "id": "e6354892-48fe-4a9c-817e-912e0a2bbe62",
    "metadata": {},
    "outputs": [
@@ -2152,10 +1948,10 @@
   },
   {
    "cell_type": "raw",
-   "id": "8f664a33-566f-4c1d-a372-f87610e45344",
+   "id": "b560909f-b1f5-4a03-8ebd-3b3cecd336c1",
    "metadata": {},
    "source": [
-    "# raw_intensity.Annotations(onset=np.linspace(120, 600, 9), duration=[20]*9)"
+    "mne.Annotations(onset=np.linspace(120, 600, 9), duration=[20]*9, description=[])"
    ]
   },
   {
@@ -2172,6 +1968,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "7d2640cb-73ee-4e9e-b7d4-d013ccce4f08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Annotations | 0 segments>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_intensity.annotations"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1c343783-cdf7-4a67-abcc-4f6c46431d8e",
    "metadata": {
@@ -2184,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "id": "2c9739df-a3c6-4db2-948d-8eab295ea5a5",
    "metadata": {},
    "outputs": [
@@ -2206,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "id": "d862cf78-da62-47a6-ab5f-3a4d2fc44bb0",
    "metadata": {},
    "outputs": [
@@ -2261,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "id": "c1a2a08e-02f6-4d20-9767-a430e28b2284",
    "metadata": {},
    "outputs": [],
@@ -2295,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "id": "07384e60-5c01-4c6b-9bec-25c21b5a9f4e",
    "metadata": {},
    "outputs": [],
@@ -2305,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "id": "ae2412a9-f892-471d-abe0-dbbe9c1de5c0",
    "metadata": {},
    "outputs": [
@@ -2340,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 65,
    "id": "29fc4d6f-697c-44b6-aa1c-30cca5c2c4e2",
    "metadata": {},
    "outputs": [],
@@ -2350,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 66,
    "id": "df2b5de8-c7bc-47ba-8acf-c70f5a9a7fe9",
    "metadata": {},
    "outputs": [
@@ -2380,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 67,
    "id": "c3f6bb8d-0e28-4264-a475-d37de53240ec",
    "metadata": {},
    "outputs": [
@@ -2407,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 68,
    "id": "44a92ee7-97c9-4936-88f1-a87e07ef4f7a",
    "metadata": {},
    "outputs": [],
@@ -2434,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 69,
    "id": "94dd80a8-eb44-4a0b-b8ad-5e73a65617af",
    "metadata": {},
    "outputs": [],
@@ -2446,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 70,
    "id": "595bb08a-e8e0-4643-aecf-09086a202bb8",
    "metadata": {},
    "outputs": [
@@ -2483,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 71,
    "id": "d4eb5ee2-763e-4a35-bc56-7ceefcd07ba0",
    "metadata": {},
    "outputs": [
@@ -2514,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 72,
    "id": "2b5f6c86-df01-41ce-9930-5e2ea1215398",
    "metadata": {},
    "outputs": [
@@ -2561,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 73,
    "id": "f7311c73-43ed-4706-8c1a-74ef6d8399ef",
    "metadata": {},
    "outputs": [
@@ -2592,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 74,
    "id": "cd7f2cfa-aaf8-4183-b385-37ed9adafbe5",
    "metadata": {},
    "outputs": [
@@ -2636,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 75,
    "id": "c760366d-0541-4a36-877a-08036779fb53",
    "metadata": {},
    "outputs": [],
