fix comments in main notebook
- experiment data descriptions

--- a/main.ipynb
+++ b/main.ipynb
@@ -1468,7 +1468,6 @@
    "cell_type": "markdown",
    "id": "dd53561a-5277-4f7a-82cc-8e982c19b14f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1510,15 +1509,15 @@
     "    'rt',                    # 9     # <dat.RT>                      # reaction time, in seconds\n",
     "\n",
     "    'tri_e',                 # 10    # <time.triE>                   # <tri - exp> -- trial starting time, relative to start of the experiment, in seconds\n",
-    "    'wait_e',                # 11    # <time.waitE>                  # <wait1 - exp> -- ??\n",
+    "    'wait_e',                # 11    # <time.waitE>                  # <wait1 - exp> -- wait starting time, relative to the start of the experiment, in seconds\n",
     "    'target_e',              # 12    # <time.targetE>                # <target - exp> -- target display time, relative to start of the experiment, in seconds\n",
-    "    'motion_e',              # 13    # <time.motionE>                # <motion - exp> -- motion start time, relative to start of the experiment, in seconds\n",
+    "    'motion_e',              # 13    # <time.motionE>                # <motion - exp> -- motion starting time, relative to start of the experiment, in seconds\n",
     "    'probe_e',               # 14    # <time.probeE>                 # <probe - exp> -- response collection time, relative to start of the experiment, in seconds\n",
     "\n",
     "    'tri_t',                 # 15    # <time.triT>                   # <tri - tri> -- trial starting time, relative to start of the trial, in seconds\n",
-    "    'wait_t',                # 16    # <time.waitT>                  # <wait - tri> -- initial wait time, relative to the start of the trial, in seconds\n",
+    "    'wait_t',                # 16    # <time.waitT>                  # <wait - tri> -- ??\n",
     "    'target_t',              # 17    # <time.targetT>                # <target - tri> -- target display time, relative to start of the trial, in seconds\n",
-    "    'motion_t',              # 18    # <time.motionT>                # <motion - tri> -- motion start time, relative to start of the trial, in seconds\n",
+    "    'motion_t',              # 18    # <time.motionT>                # <motion - tri> -- motion starting time, relative to start of the trial, in seconds\n",
     "    'probe_t',               # 19    # <time.probeT>                 # <probe - tri> -- response collection time, relative to start of the trial, in seconds\n",
     "\n",
     "    'wait_p',                # 20    # <time.waitP>                  # <target - wait1> -- wait duration, in seconds\n",
