fix experiment stage flow
- add data save stage to trials

--- a/main.ipynb
+++ b/main.ipynb
@@ -1480,7 +1480,7 @@
    "metadata": {},
    "source": [
     "`Stages of the experiment`\n",
-    "> *\\<exp\\>* → **\\[ *\\<tri\\>* = *\\<wait1\\>* → *\\<target\\>* → *\\<motion\\>* → *\\<probe\\>* → *\\<feedb\\>* → *\\<feedbEnd\\>* + {data_write()} \\]** → *\\<expEnd\\>*"
+    "> *\\<exp\\>* → **\\[ *\\<tri\\>* = *\\<wait1\\>* → *\\<target\\>* → *\\<motion\\>* → *\\<probe\\>* → *\\<feedb\\>* → *\\<feedbEnd\\>* → {data_write()} \\]** → *\\<expEnd\\>*"
    ]
   },
   {
@@ -1818,7 +1818,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_320176/2455740974.py:2: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "/tmp/ipykernel_326767/2455740974.py:2: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  raw_intensity.set_montage(montage)\n"
      ]
     },
@@ -1942,7 +1942,7 @@
    "metadata": {},
    "source": [
     "`Stages of the experiment`\n",
-    "> *\\<exp\\>* → **\\[ *\\<tri\\>* = *\\<wait1\\>* → *\\<target\\>* → *\\<motion\\>* → *\\<probe\\>* → *\\<feedb\\>* → *\\<feedbEnd\\>* \\]** → *\\<expEnd\\>*"
+    "> *\\<exp\\>* → **\\[ *\\<tri\\>* = *\\<wait1\\>* → *\\<target\\>* → *\\<motion\\>* → *\\<probe\\>* → *\\<feedb\\>* → *\\<feedbEnd\\>* → {data_write()} \\]** → *\\<expEnd\\>*"
    ]
   },
   {
