change plot durations

--- a/main.ipynb
+++ b/main.ipynb
@@ -2297,6 +2297,7 @@
    "cell_type": "markdown",
    "id": "9e6980de-97b0-42d4-a211-dded7169c2ee",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2415,7 +2416,6 @@
    "cell_type": "markdown",
    "id": "1c343783-cdf7-4a67-abcc-4f6c46431d8e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2495,7 +2495,6 @@
    "cell_type": "markdown",
    "id": "c34e7e62-6947-4a52-a72e-349bb586e853",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2609,14 +2608,13 @@
    ],
    "source": [
     "# Plot raw optical density (OD) signals\n",
-    "raw_od.plot(show_scrollbars=False);"
+    "raw_od.plot(show_scrollbars=False, duration=DUR['exp']/3);"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a12d9a11-0b21-4789-957e-935ce2c902bd",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2685,7 +2683,7 @@
    ],
    "source": [
     "# Plot corrected optical density (OD) signals\n",
-    "corrected_od_tddr.plot(show_scrollbars=False);"
+    "corrected_od_tddr.plot(show_scrollbars=False, duration=DUR['exp']/3);"
    ]
   },
   {
@@ -2811,7 +2809,7 @@
    ],
    "source": [
     "# Plot corrected and regressed optical density (OD) signals\n",
-    "corrected_od_tddr_ss.plot(show_scrollbars=False);"
+    "corrected_od_tddr_ss.plot(show_scrollbars=False, duration=DUR['exp']/3);"
    ]
   },
   {
@@ -2894,7 +2892,7 @@
    ],
    "source": [
     "# Plot raw chromophore (HbO and HbR) signals\n",
-    "raw_haemo.plot(show_scrollbars=False);"
+    "raw_haemo.plot(show_scrollbars=False, duration=DUR['exp']/3);"
    ]
   },
   {
@@ -3116,7 +3114,7 @@
    ],
    "source": [
     "# Plot filtered chromophore (HbO and HbR) signals\n",
-    "raw_haemo.plot(show_scrollbars=False);"
+    "raw_haemo.plot(show_scrollbars=False, duration=DUR['exp']/3);"
    ]
   },
   {
@@ -3192,7 +3190,7 @@
    ],
    "source": [
     "# Plot filtered and enhanced chromophore (HbO and HbR) signals\n",
-    "corrected_haemo.plot(show_scrollbars=False);"
+    "corrected_haemo.plot(show_scrollbars=False, duration=DUR['exp']/3);"
    ]
   },
   {
