--- a/playground.ipynb
+++ b/playground.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read some data and create instantiate NIRS()\n",
+    "# Instantiate NIRS() and read data\n",
     "nirs = NIRS().read(1, 1, 4, transform=False, remove_backlight=True)"
    ]
   },
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e3a0de2f-39f0-40dd-b525-2a22bdfe4b1a",
+   "id": "d83dea52-a2fd-486a-a2ce-3b8f43b7800e",
    "metadata": {},
    "outputs": [
     {
